@@ -1,3 +1,5 @@
+2006/8/26 -- released version 20060826_trunk
+
 2006/8/25 -- released version 20060825_trunk
 
 2006/8/24 -- released version 20060824_trunk
